<resources>
    <string name="app_name" translatable="false">Tracing</string>
    <string name="txvWelcome">Bienvenido a Tracing</string>
    <string name="btnLoginBusiness">Business</string>
    <string name="txvWelcReadme">Tu app para el seguimiento diario empresarial, profesional y particular</string>
    <string name="txvNoAccount">¿Aún no estás registrado?</string>
    <string name="txvYesAccount">Ya tengo cuenta, Iniciar Sesión</string>
    <string name="txvWelcOr">o</string>
    <string name="txvLoginBusiness">Soy una Empresa</string>
    <string name="txvLoginProfessional">Soy un Profesional</string>
    <string name="txvChooseAccount">Elige tu tipo de perfil</string>
    <string name="txvLoginUser">Soy un Usuario</string>
    <string name="txvLoginAccount">Inicia sesión en Tracing</string>
    <string name="edtSignUpPass">Introduce la contraseña</string>
    <string name="edtSignUpMail">Introduce tu email</string>
    <string name="kbRemember">Recordar usuario</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="edtSignUpName">Nombre</string>
    <string name="edtSignUpSurname">Apellidos</string>
    <string name="edtSignInName">Introduce tu email</string>
    <string name="edtSignInPass">Introduce la contraseña</string>
    <string name="txvLostUC">No recuerdo la contraseña</string>
    <string name="edtSignUpPhone">Teléfono de contacto</string>
    <string name="btnSignUpRegister">Registrarse</string>
    <string name="title_activity_wall">Wall</string>

    <string name="action_settings">Ajustes</string>
    <string name="txvSignLostPassword">¿Has olvidado la contraseña? \n Envíate la contraseña a tu correo para volver a iniciar sesión en Tracing</string>
    <string name="edtSignLostPassword">Introduce tu email</string>
    <string name="btnSignLostSentPass">Envíame la contraseña</string>

    <string name="txvAboutTitle">Acerca de ...</string>
    <string name="txvAboutVersionTitle">Versión de la aplicación</string>
    <string name="txvAboutAuthorTitle">Autor de la alpha</string>
    <string name="txvAboutVersionSummary">0.0.0.0.0.0,1 super_mega_hiper_pre_alpha</string>
    <string name="txvAboutAuthorSummary">Juan Antonio Suárez Rosa (JasrSir) \n (Agradecimientos) Lourdes Rodríguez</string>
    <string name="txvAboutLicenceTitle">Licencia</string>
    <string name="txvAboutLicenceSummary">GNU código abierto</string>
    <string name="txvAboutContactTitle">Contacto</string>
    <string name="txvAboutContactSummary">Para contactar con el autor puedes enviar un email a la dirección jasrsir@gmail.com</string>
    <string name="txvAboutTermsTitle">Condiciones y términos de uso</string>
    <string name="txvAboutTermsSummary">Lea nuestras condiciones y términos de uso para usar la aplicación</string>
    <string name="edtSignUpWork">Profesión</string>
    <string name="edtSignUpCif">Introduce el CIF</string>
    <string name="textSaveChanges">Guardar cambios</string>
    <string name="edtNewEventLink">Link</string>
    <string name="edtNewEventSummary">Cuerpo del evento</string>
    <string name="edtNewEventTitle">Título del evento</string>
    <string name="txvNewEventDate">Selecciona el día de la cita</string>
    <string name="txvNewEventHourEnd">FIN</string>
    <string name="txvNewEventHourStart">INICIO</string>
    <string name="makeAccountFirst">Debes registrarte primero</string>
    <string name="noEquals">Email o password NO coinciden</string>
    <string name="txvDateFHourEnd">A</string>
    <string name="txvDateFHourStart">De</string>
    <string name="txvDateFDaySelect">Dia de la cita</string>
    <string name="wall_menu_link">Link</string>
    <string name="wall_menu_anotation">Notas</string>
    <string name="wall_menu_action">Acción</string>
    <string name="wall_menu_date">Citas</string>
    <string name="ndAbout">Acerca de...</string>
    <string name="ndSettings">Configuración</string>
    <string name="ndProfile">Perfil</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_Profile">Perfil</string>
    <string name="setting_Sw_title">¿Recordar usuario?</string>
    <string name="setting_Sw_summary">Para iniciar sesión automáticamente</string>
    <string name="settings_Custom">Personalización</string>
    <string name="setting_theme_title">Establecer tema de Aplicación</string>
    <string name="setting_theme_summary">Cambia el color general de la app</string>
    <string name="settings_Info">Información</string>
    <string name="setting_history_title">Historial</string>
    <string name="setting_history_summary">Mira todas tus acciones realizadas</string>
    <string name="setting_info_title">Acerca de. . .</string>
    <string name="setting_info_summary">Más información sobre la aplicación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
