<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.tracing.LoginMain_Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/txvWelcome"
                android:textAlignment="center"
                android:textSize="30dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:srcCompat="@drawable/tracinglogo"
                android:id="@+id/imgLogo" />

            <TextView
                android:text="@string/txvWelcReadme"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txvWelcReadme" />

            <TextView
                android:text="@string/txvNoAccount"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRegister"
                android:id="@+id/txvNoAccount" />

            <TextView
                android:text="@string/txvWelcOr"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20dp"
                android:textAlignment="center"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txvWelcOr" />

            <TextView
                android:text="@string/txvYesAccount"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRegister"
                android:id="@+id/txvYesAccount" />
        </LinearLayout>

</RelativeLayout>
