<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_lost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:theme="@style/ThemeInfo"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.tracing.activity.SignLost_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txvSignLostPassword"
        android:text="@string/txvSignLostPassword" />

    <EditText
        android:id="@+id/edtSignLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSignLostPassword"
        android:paddingTop="64dp"
        android:ems="10"
        android:hint="@string/edtSignLostPassword"
        android:inputType="textEmailAddress"
        tools:textSize="20sp" />

    <!-- SignLost UserPojo -->
    <Button
        android:id="@+id/btnSignLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSignLostPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login"
        android:onClick="onClickSignLostPassword"
        android:text="@string/btnSignLostSentPass"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</RelativeLayout>
