<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasrsir.tracing.activity.SignIn_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <!-- Logo icon -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:srcCompat="@drawable/tracinglogo" />

        <!-- Layout UserPojo -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            tools:textSize="24sp">

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edtSignInName"
                android:inputType="textEmailAddress"
                tools:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Layout Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tilUser"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            tools:textSize="24sp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edtSignInPass"
                android:inputType="textPassword"
                android:textStyle="bold"
                tools:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Check Remember UserPojo -->
        <CheckBox
            android:id="@+id/ckbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tilPass"
            android:text="@string/kbRemember" />

        <!-- Layout UserPojo -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ckbRemember"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login"
            android:onClick="onClickLogin_LostUC"
            android:text="@string/btnLogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <!-- Line -->
        <View
            android:id="@+id/viewSepLeft"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/cardview_dark_background" />

        <!-- Don't remember? -->
        <TextView
            android:id="@+id/txvLostUC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewSepLeft"
            android:onClick="onClickLogin_LostUC"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txvLostUC"
            android:textAlignment="center"
            android:textColor="@color/colorAccentText" />

    </RelativeLayout>

</ScrollView>
