<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selector_user_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.tracing.SelectorUser_Activity">

    <TextView
        android:id="@+id/txvChooseAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/txvChooseAccount"
        android:textAlignment="center"
        android:textSize="25dp" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="25dp"
            app:srcCompat="@mipmap/ic_business_black_48dp"
            android:id="@+id/imgBusiness" />

        <TextView
            android:id="@+id/txvLoginBusiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingStart="90dp"
            android:text="@string/txvLoginBusiness"
            android:textSize="25dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="25dp"
            app:srcCompat="@mipmap/ic_supervisor_account_black_48dp"
            android:id="@+id/imgProfessional" />

        <TextView
            android:id="@+id/txvLoginProfessional"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingStart="90dp"
            android:paddingTop="20dp"
            android:text="@string/txvLoginProfessional"
            android:textSize="25dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="25dp"
            app:srcCompat="@mipmap/ic_person_black_48dp"
            android:id="@+id/imgUser" />

        <TextView
            android:id="@+id/txvLoginUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/txvLoginUser"
            android:paddingStart="90dp"
            android:textSize="25dp" />
    </android.support.v7.widget.CardView>

</LinearLayout>
