<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selector_user_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.tracing.activity.SelectorUser_Activity">

    <!--Text choise -->
    <TextView
        android:id="@+id/txvChooseAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/txvChooseAccount"
        android:textAlignment="center"
        android:textSize="25sp" />

    <!-- Card Business -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardAccountBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txvChooseAccount"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickSelectAccount">

        <ImageView
            android:id="@+id/imgBusiness"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25dp"
            android:paddingStart="10dp"
            app:srcCompat="@mipmap/ic_business_black_48dp" />

        <TextView
            android:id="@+id/txvLoginBusiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="90sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/txvLoginBusiness"
            android:textSize="25sp" />
    </android.support.v7.widget.CardView>

    <!-- Card Professional -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardAccountProfessional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardAccountBusiness"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickSelectAccount">

        <ImageView
            android:id="@+id/imgProfessional"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25sp"
            android:paddingStart="10sp"
            app:srcCompat="@mipmap/ic_supervisor_account_black_48dp" />

        <TextView
            android:id="@+id/txvLoginProfessional"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="90sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/txvLoginProfessional"
            android:textSize="25sp" />
    </android.support.v7.widget.CardView>

    <!-- Card UserPojo -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardAccountUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardAccountProfessional"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickSelectAccount">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="25sp"
            android:paddingStart="10sp"
            app:srcCompat="@mipmap/ic_person_black_48dp" />

        <TextView
            android:id="@+id/txvLoginUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="90sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/txvLoginUser"
            android:textSize="25sp" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
