<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- title event -->
        <TextView
            android:id="@+id/txvDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_margin"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:text="Title"
            android:visibility="visible"/>

        
        <TextView
            android:id="@+id/txvDateSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvDateTitle"
            android:padding="@dimen/cardview_margin"
            android:text="Summary" />

        <TextView
            android:id="@+id/txvDateFDaySelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvDateSummary"
            android:padding="@dimen/cardview_margin"
            android:text="@string/txvDateFDaySelect"
            android:textColor="@color/colorHint"
            android:textSize="14sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/txvDateDaySelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txvDateFDaySelect"
            android:layout_toRightOf="@+id/txvDateFDaySelect"
            android:layout_toEndOf="@+id/txvDateFDaySelect"
            android:padding="@dimen/cardview_margin"
            android:text="00 / 00 / 0000" />

        <TextView
            android:id="@+id/txvDateFHourStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txvDateDaySelect"
            android:layout_alignBaseline="@+id/txvDateFDaySelect"
            android:padding="@dimen/cardview_margin"
            android:text="@string/txvDateFHourStart"
            android:textColor="@color/colorHint"
            android:textSize="14sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/txvDateHourStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txvDateFHourStart"
            android:textSize="14sp"
            android:layout_toRightOf="@+id/txvDateFHourStart"
            android:layout_toEndOf="@+id/txvDateFHourStart"
            android:padding="@dimen/cardview_margin"
            android:text="00:00" />

        <TextView
            android:id="@+id/txvDateFHourEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_margin"
            android:layout_toRightOf="@+id/txvDateHourStart"
            android:layout_toEndOf="@+id/txvDateHourStart"
            android:layout_alignBaseline="@+id/txvDateFHourStart"
            android:text="@string/txvDateFHourEnd"
            android:textColor="@color/colorHint"
            android:textSize="14sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/txvDateHourEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txvDateFHourEnd"
            android:layout_toRightOf="@+id/txvDateFHourEnd"
            android:padding="@dimen/cardview_margin"
            android:text="00:00" />
    </RelativeLayout>
</android.support.v7.widget.CardView>